.provarCaches/00D5f000005vwGkEAI/objects/rstk__soentcal__c.object
<CustomObject>
    <description>soentcal__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soentcal_div__r.rstk__externalid__c  &amp; &apos;_&apos; &amp; rstk__soentcal_calendarid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula external id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soentcal_calendarid__c &amp; &quot;(&quot; &amp; rstk__soentcal_desc__c &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_begday__c</fullName>
        <inlineHelpText>The hour/minute that the work day begins.</inlineHelpText>
        <label>Beginning of Day (HH:MM)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_calendarid__c</fullName>
        <inlineHelpText>Unique identifier for this Calendar.</inlineHelpText>
        <label>Calendar ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_desc__c</fullName>
        <inlineHelpText>Optional user-defined description up to 50 characters in length.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division for which this Calendar applies.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Entitlement Calendar</relationshipLabel>
        <relationshipName>soentcals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_endday__c</fullName>
        <inlineHelpText>The hour/minute that the work day ends.</inlineHelpText>
        <label>End of Day (HH:MM)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_resphoursholday__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Normal number of hours in which a response can be expected over a Holiday.</inlineHelpText>
        <label>Response Hours –Holiday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_resphourswkday__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Normal number of hours in which a response can be expected during a given work day.</inlineHelpText>
        <label>Response Hours – Weekday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentcal_resphourswkend__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Normal number of hours in which a response can be expected over a weekend.</inlineHelpText>
        <label>Response Hours – Weekend</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Entitlement Calendar</label>
    <listViews>
        <fullName>rstk__RS_Entitlement_Calendar</fullName>
        <columns>NAME</columns>
        <columns>rstk__soentcal_div__c</columns>
        <columns>rstk__soentcal_calendarid__c</columns>
        <columns>rstk__soentcal_desc__c</columns>
        <columns>rstk__soentcal_begday__c</columns>
        <columns>rstk__soentcal_endday__c</columns>
        <columns>rstk__soentcal_resphourswkday__c</columns>
        <columns>rstk__soentcal_resphourswkend__c</columns>
        <columns>rstk__soentcal_resphoursholday__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Entitlement Calendar</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Entitlement Calendar  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Begining_Day_Validation</fullName>
        <active>true</active>
        <description>Beginning of Day must be in the format HH:MM</description>
        <errorConditionFormula>AND(
!ISBLANK(rstk__soentcal_begday__c),
OR(
!REGEX( rstk__soentcal_begday__c, &apos;\\d\\d:\\d\\d&apos; ),
VALUE(LEFT( rstk__soentcal_begday__c , 2)) &gt; 23,
VALUE(RIGHT( rstk__soentcal_begday__c, 2)) &gt; 59
))</errorConditionFormula>
        <errorMessage>Beginning of Day must be in the format HH:MM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Calendar_Id_cannot_be_edited</fullName>
        <active>true</active>
        <description>Calendar_Id_cannot_be_edited</description>
        <errorConditionFormula>AND(
!ISNEW(),
ISCHANGED( rstk__soentcal_calendarid__c )
)</errorConditionFormula>
        <errorMessage>Calendar id cannot be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Check_calendar_id_isnotnull</fullName>
        <active>true</active>
        <description>Check_calendar_id_isnotnull</description>
        <errorConditionFormula>ISBLANK(rstk__soentcal_calendarid__c)</errorConditionFormula>
        <errorMessage>Calendar id is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_cannot_be_edited</fullName>
        <active>true</active>
        <description>Division_cannot_be_edited</description>
        <errorConditionFormula>AND(
!ISNEW() ,
  ISCHANGED(rstk__soentcal_div__c) 
)</errorConditionFormula>
        <errorMessage>Division Cannot be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_cannot_be_null</fullName>
        <active>true</active>
        <description>Division_cannot_be_null</description>
        <errorConditionFormula>ISBLANK(rstk__soentcal_div__c)</errorConditionFormula>
        <errorMessage>Division is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__End_Day_Validation</fullName>
        <active>true</active>
        <description>End of Day must be in the format HH:MM</description>
        <errorConditionFormula>AND(
!ISBLANK(rstk__soentcal_endday__c),
OR(
!REGEX( rstk__soentcal_endday__c, &apos;\\d\\d:\\d\\d&apos; ),
VALUE(LEFT( rstk__soentcal_endday__c , 2)) &gt; 23,
VALUE(RIGHT( rstk__soentcal_endday__c, 2)) &gt; 59
))</errorConditionFormula>
        <errorMessage>End of Day must be in the format HH:MM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__reponsehoursholiday</fullName>
        <active>true</active>
        <description>cannot be less than zero</description>
        <errorConditionFormula>rstk__soentcal_resphoursholday__c &lt; 0</errorConditionFormula>
        <errorMessage>Response hours holiday cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__responsehoursweekday</fullName>
        <active>true</active>
        <description>cannot be less than zero</description>
        <errorConditionFormula>rstk__soentcal_resphourswkday__c  &lt; 0</errorConditionFormula>
        <errorMessage>Reponse hours weekday value cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__responsehoursweekend</fullName>
        <active>true</active>
        <description>cannot be less than zero</description>
        <errorConditionFormula>rstk__soentcal_resphourswkend__c &lt; 0</errorConditionFormula>
        <errorMessage>Response hours weekend cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>